Fix: Broken Image

--- a/404.md
+++ b/404.md
@@ -3,4 +3,4 @@ layout: default
 title: Page Not Found (404)
 ---
 
-<img src="/img/spell-page-error.jpg" alt=""/>
+<img src="/assets/img/spell-page-error.jpg" alt=""/>
