--- a/404.md
+++ b/404.md
@@ -1,6 +1,13 @@
 ---
 layout: default
+section: error
 title: Page Not Found (404)
 ---
 
-<img src="/assets/img/spell-page-error.jpg" alt=""/>
+<h1>Page Not Found</h1>
+
+<img src="/assets/img/spell-page-error.jpg" alt="Michael 'Spell' Spellacy, Director of User Interface Development"/>
+ 
+<p>The page you are looking for might have been removed, had its name changed, or is temporarily unavailable. If you receive this message again, we would appreciate it if you would <a href="http://www.tmp.com/connect/">contact us</a> and describe your last few steps leading up to the problem.</p>
+ 
+<p>For now, please visit our <a href="/">home page</a>.</p>
