--- a/404.md
+++ b/404.md
@@ -1,10 +1,8 @@
 ---
 layout: default
 section: error
-title: Page Not Found (404)
+title: Page Not Found
 ---
-
-<h1>Page Not Found</h1>
 
 <img src="/assets/img/spell-page-error.png" alt="Michael 'Spell' Spellacy, Director of User Interface Development"/>
  
