Template Maintenance! Happy 2018!

--- a/404.md
+++ b/404.md
@@ -4,7 +4,7 @@ section: error
 title: Page Not Found
 ---
 
-<img src="/assets/img/spell-page-error.png" alt="Michael 'Spell' Spellacy, Director of User Interface Development"/>
+![Michael 'Spell' Spellacy, TMP's Director of Accessibility and Chief Smart Aleck](/assets/img/spell-page-error.png){: .article-image }
  
 <p>The page you are looking for might have been removed, had its name changed, or is temporarily unavailable. If you receive this message again, we would appreciate it if you would <a href="http://www.tmp.com/connect/">contact us</a> and describe your last few steps leading up to the problem.</p>
  
